tests/spec/format/snapshots/comment_same_line_trailing_between_interface_method_params.snap
---
source: tests/spec/format/mod.rs
description: |-
  interface Adder {
    fn add(
      a: int, // trailing on a
      b: int,
    ) -> int
  }
---
interface Adder {
  fn add(
    a: int, // trailing on a
    b: int,
  ) -> int
}
