tests/spec/format/snapshots/comment_same_line_trailing_between_lambda_params.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    let f = |
      a: int, // trailing on a
      b: int,
    | a + b
    f(1, 2)
  }
---
fn test() {
  let f = |
    a: int, // trailing on a
    b: int,
  | a + b
  f(1, 2)
}
