tests/spec/format/snapshots/comment_same_line_trailing_between_slice_elements.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    let xs = [
      1, // trailing on first
      // leading for second
      2,
    ]
  }
---
fn test() {
  let xs = [
    1, // trailing on first
    // leading for second
    2,
  ]
}
