tests/spec/format/snapshots/comment_same_line_trailing_between_statements_with_blank_line.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    let x = 1 // trailing on x
  
    // leading for y
    let y = 2
  }
---
fn test() {
  let x = 1 // trailing on x

  // leading for y
  let y = 2
}
