tests/spec/format/snapshots/comment_same_line_trailing_between_tuple_elements.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    let pair = (
      1, // trailing on first
      // leading for second
      2,
    )
  }
---
fn test() {
  let pair = (
    1, // trailing on first
    // leading for second
    2,
  )
}
