tests/spec/format/snapshots/comment_same_line_trailing_on_enum_variant.snap
---
source: tests/spec/format/mod.rs
description: |-
  enum E {
    A, // trailing variant
    B,
    C,
  }
---
enum E {
  A, // trailing variant
  B,
  C,
}
