tests/spec/format/snapshots/comment_same_line_trailing_on_enum_variant_pattern_element.snap
---
source: tests/spec/format/mod.rs
description: |-
  enum E { Pair(int, int), Other }
  
  fn f(e: E) -> int {
    match e {
      Pair(a, // trailing variant payload
      b) => a + b,
      Other => 0,
    }
  }
---
enum E {
  Pair(int, int),
  Other,
}

fn f(e: E) -> int {
  match e {
    Pair(
      a, // trailing variant payload
      b,
    ) => a + b,
    Other => 0,
  }
}
