tests/spec/format/snapshots/comment_same_line_trailing_on_impl_method.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct Foo {}
  
  impl Foo {
    fn a() {} // trailing
    fn b() {}
  }
---
struct Foo {}

impl Foo {
  fn a() {} // trailing

  fn b() {}
}
