tests/spec/format/snapshots/comment_same_line_trailing_on_interface_method.snap
---
source: tests/spec/format/mod.rs
description: |-
  interface I {
    fn first() // trailing method
    fn second()
  }
---
interface I {
  fn first() // trailing method
  fn second()
}
