tests/spec/format/snapshots/comment_same_line_trailing_on_interface_parent.snap
---
source: tests/spec/format/mod.rs
description: |-
  interface I {
    impl A // trailing parent
    impl B
    fn first()
  }
---
interface I {
  embed A // trailing parent
  embed B
  fn first()
}
