tests/spec/format/snapshots/comment_same_line_trailing_on_last_nested_match_arm_in_select.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f(c: Channel<int>) -> int {
    select {
      match c.receive() {
        Some(v) => v,
        None => 0, // trailing last nested arm
      },
      _ => 1,
    }
  }
---
fn f(c: Channel<int>) -> int {
  select {
    match c.receive() {
      Some(v) => v,
      None => 0, // trailing last nested arm
    },
    _ => 1,
  }
}
